tests/baselines/reference/for-of27.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of27.ts(5,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of27.ts (1 errors) ====
    class StringIterator {
        [Symbol.iterator]: any;
    }
    
    for (var v of new StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.